Move everything into javascript

--- a/index.html
+++ b/index.html
@@ -2,42 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Flag Memory Game 🧠</title>
+  <title>Shinkei Suijaku 神経衰弱 🧠</title>
   <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <h1>🧠 Flag Memory Game</h1>
-
-  <div class="game-board">
-    <div class="card" data-flag="japan">
-      <div class="front">
-        <img src="https://flagcdn.com/w320/jp.png" alt="Japan">
-      </div>
-      <div class="back">❓</div>
-    </div>
-
-    <div class="card" data-flag="malaysia">
-      <div class="front">
-        <img src="https://flagcdn.com/w320/my.png" alt="Malaysia">
-      </div>
-      <div class="back">❓</div>
-    </div>
-
-    <div class="card" data-flag="malaysia">
-      <div class="front">
-        <img src="https://flagcdn.com/w320/my.png" alt="Malaysia">
-      </div>
-      <div class="back">❓</div>
-    </div>
-
-    <div class="card" data-flag="japan">
-      <div class="front">
-        <img src="https://flagcdn.com/w320/jp.png" alt="Japan">
-      </div>
-      <div class="back">❓</div>
-    </div>
-  </div>
-
   <script src="index.js"></script>
 </body>
 </html>
