Trigger a function in html side

--- a/index.html
+++ b/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <title>Shinkei Suijaku 神経衰弱 🧠</title>
   <link rel="stylesheet" href="index.css">
 </head>
+
 <body>
+  <!-- Load JS first -->
   <script src="index.js"></script>
+
+  <!-- Trigger initialization after DOM is ready -->
+  <script>
+    window.addEventListener('DOMContentLoaded', initGame);
+  </script>
 </body>
+
 </html>
